[package]
name = "route_planner"
version = "0.1.0"
edition = "2021"

[lib]
name = "route_planner"
path = "src/lib.rs"

[dependencies]
rand = "0.8"
rayon = "1.7"
indicatif = "0.17"
ahash = "0.8"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "route_correctness"
harness = false
