[package]
name = "route_planner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
indicatif = {version = "*", features = ["rayon"]}
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde_derive = "1.0.192"
serde = "1.0.192"
